--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2507,6 +2507,7 @@ header .form-inline {
 	.modal .modal-content img{
   		max-width:100px;
   		height:100px;
+  		width:100px;
   		margin-top:20px;
 	}
 
