--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2505,10 +2505,9 @@ header .form-inline {
 	}
 
 	.modal .modal-content img{
-  		max-width:100px;
-  		height:100px;
-  		width:100px;
-  		margin-top:20px;
+		max-height:150px;
+  		max-width:150px;
+  		/*margin-top:20px;*/
 	}
 
 	.container{
@@ -2536,7 +2535,7 @@ header .form-inline {
 	.image-preview-input-title {
 	    margin-left:2px;
 	}
-	/*body {
+	body {
 	    color: #566787;
 	    font-family: 'Varela Round', sans-serif;
 	    font-size: 13px;
@@ -2546,5 +2545,5 @@ header .form-inline {
 		display: block;
 		width: 100%;
 		height: auto;  
-	}   */
+	}   
 
